--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   notification_center: ^1.0.1
   shared_preferences: ^2.2.3
   sizer: ^2.0.15
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
